; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvme/target/extr_rdma.c_nvmet_rdma_destroy_queue_ib.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvme/target/extr_rdma.c_nvmet_rdma_destroy_queue_ib.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvmet_rdma_queue = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.ib_qp* }
%struct.ib_qp = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvmet_rdma_queue*)* @nvmet_rdma_destroy_queue_ib to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvmet_rdma_destroy_queue_ib(%struct.nvmet_rdma_queue* %0) #0 {
  %2 = alloca %struct.nvmet_rdma_queue*, align 8
  %3 = alloca %struct.ib_qp*, align 8
  store %struct.nvmet_rdma_queue* %0, %struct.nvmet_rdma_queue** %2, align 8
  %4 = load %struct.nvmet_rdma_queue*, %struct.nvmet_rdma_queue** %2, align 8
  %5 = getelementptr inbounds %struct.nvmet_rdma_queue, %struct.nvmet_rdma_queue* %4, i32 0, i32 1
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.ib_qp*, %struct.ib_qp** %7, align 8
  store %struct.ib_qp* %8, %struct.ib_qp** %3, align 8
  %9 = load %struct.ib_qp*, %struct.ib_qp** %3, align 8
  %10 = call i32 @ib_drain_qp(%struct.ib_qp* %9)
  %11 = load %struct.nvmet_rdma_queue*, %struct.nvmet_rdma_queue** %2, align 8
  %12 = getelementptr inbounds %struct.nvmet_rdma_queue, %struct.nvmet_rdma_queue* %11, i32 0, i32 1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = call i32 @rdma_destroy_id(%struct.TYPE_2__* %13)
  %15 = load %struct.ib_qp*, %struct.ib_qp** %3, align 8
  %16 = call i32 @ib_destroy_qp(%struct.ib_qp* %15)
  %17 = load %struct.nvmet_rdma_queue*, %struct.nvmet_rdma_queue** %2, align 8
  %18 = getelementptr inbounds %struct.nvmet_rdma_queue, %struct.nvmet_rdma_queue* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @ib_free_cq(i32 %19)
  ret void
}

declare dso_local i32 @ib_drain_qp(%struct.ib_qp*) #1

declare dso_local i32 @rdma_destroy_id(%struct.TYPE_2__*) #1

declare dso_local i32 @ib_destroy_qp(%struct.ib_qp*) #1

declare dso_local i32 @ib_free_cq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
